<resources>
    <string name="app_name">Ifelse</string>

    <!-- Strings related to login -->
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="go_register">아직 회원이 아니십니까? 지금 가입하세요</string>
    <string name="go_find">비밀번호를 잊으셨나요?</string>

    <!-- Strings related to Register -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="name">이름(닉네임)</string>
    <string name="female">여성</string>
    <string name="male">남성</string>
    <string name="gender">성별</string>
    <string name="old">나이</string>
    <string name="already_member">이미 회원이세요? 지금 로그인하세요</string>

    <!-- Strings related to Find password -->
    <string name="find_password">비밀번호 찾기</string>
    <string name="input_email">가입한 Email 주소를 입력하세요</string>
    <string name="send_email">Email 발송</string>

    <!-- Strings related to Write and Article -->
    <string name="title">제목</string>
    <string name="description">설명</string>
    <string name="startTime">시작 시간</string>
    <string name="endTime">끝 시간</string>
    <string name="option1">첫 번째 선택지</string>
    <string name="option2">두 번째 선택지</string>
    <string name="target_old">나이</string>
    <string name="vote">투표하기</string>

    <!-- Strings related to Write -->
    <string name="spinner">카테고리를 선택해주세요</string>
    <string name="target_gender">성별</string>
    <string name="category">카테고리</string>
    <string name="gender_men">남성</string>
    <string name="gender_women">여성</string>
    <string name="gender_all">양성</string>
    <string name="category_food">음식</string>
    <string name="category_fashion">패션</string>
    <string name="category_love">연애</string>
    <string name="category_study">진로 및 학업</string>
    <string name="category_entertainment">엔터테인먼트</string>
    <string name="category_place">장소</string>
    <string name="category_beauty">뷰티</string>
    <string name="category_etc">기타</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>

    <!-- Strings related to Setting -->
    <string name="authen">계정 관리</string>
    <string name="version">버전 정보</string>
    <string name="notice">공지 사항</string>
    <string name="quest">문의</string>
    <string name="signOut">로그아웃</string>
    <string name="star">별점</string>
    <string name="new_ver">최신 버전</string>
    <string name="present_ver">현재 버전</string>
    <string name="supportedSDK">지원환경</string>



    <!-- Strings related to Statistic-->
    <string name="new_chart">새로운 차트 만들기</string>
    <string-array name="chart_ary">
        <item>막대 그래프</item>
        <!--<item>원 그래프</item>-->
        <item>선 그래프</item>
        <!--<item>산점도 그래프</item>-->
    </string-array>
    <string-array name="bar_chart_ary">
        <item>성별 비율</item>
        <item>연령 비율</item>
        <item>성별 + 연령 비율</item>
        <item>카테고리별 게시물 비율</item>
        <item>성별 + 카테고리 별 게시물 비율</item>
        <item>연령 + 카테고리 별 게시물 비율</item>
        <item>성별 + 연령 + 카테고리 별 게시물 비율</item>
    </string-array>
    <string-array name="pie_chart_ary">
        <item>성별 비율</item>
        <item>연령 비율</item>
        <item>카테고리별 게시물 비율</item>
    </string-array>
    <string-array name="line_chart_ary">
        <item>시간대 별 게시물 업데이트 수</item>
        <item>시간대 별 투표 업데이트 수</item>
    </string-array>
    <string-array name="scatter_chart_ary">
        <item>아직 구현 중입니다</item>
    </string-array>


    <string-array name="option_ary">
        <item>카메라로 찍기</item>
        <item>갤러리에서 선택</item>
        <item>글로 쓰기</item>
    </string-array>


    <string-array name="category_ary">
        <item>음식</item>
        <item>패션</item>
        <item>연애</item>
        <item>진로 및 학업</item>
        <item>엔터테인먼트</item>
        <item>장소</item>
        <item>뷰티</item>
        <item>기타</item>
    </string-array>


    <string name="title_newsfeed">뉴스피드</string>
    <string name="title_mymenu">마이메뉴</string>
    <string name="title_statistic">통계</string>
    <string name="title_setting">설정</string>

    <string name="written">내가 쓴 게시물</string>
    <string name="voted">내가 투표한 게시물</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
