<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.socialappproject.ifelse.SettingFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/authen_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authen"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:padding="20dp"
            android:textSize="20dp"
            android:background="@drawable/shape"/>

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_below="@id/authen_tv"
            android:layout_margin="8dp"
            android:padding="20dp"
            android:textSize="20dp"
            android:background="@drawable/shape"/>

        <TextView
            android:id="@+id/notice_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:layout_below="@id/version_tv"
            android:layout_margin="8dp"
            android:padding="20dp"
            android:textSize="20dp"
            android:background="@drawable/shape"/>

        <TextView
            android:id="@+id/quest_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quest"
            android:layout_below="@id/notice_tv"
            android:layout_margin="8dp"
            android:padding="20dp"
            android:textSize="20dp"
            android:background="@drawable/shape"/>

    </RelativeLayout>




</FrameLayout>
