<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical"
              android:paddingTop="56dp"
              tools:context="com.socialappproject.ifelse.FindActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/symbol"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/find_password"
        android:textColor="#FFFFFF"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/editTextUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send_email"
        android:textColor="#FFFFFF"
        android:textSize="15dp"/>

</LinearLayout>


